tests-integration/tests/snapshots/test__git_history__check_after.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "app.rs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "new/fresh.rs",
      "status": "clean"
    }
  ]
}
