tests-integration/tests/snapshots/test__git_history__check_before.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "app.rs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "new/fresh.rs",
      "status": "missing"
    }
  ]
}
