tests-integration/tests/snapshots/test__git_history__format_idempotent.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "clean",
      "path": "app.rs"
    },
    {
      "outcome": "clean",
      "path": "new/fresh.rs"
    }
  ]
}
