tests-integration/tests/snapshots/test__git_history__tree_before.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== app.rs ===
fn feature() {}␊
fn dirty() {}␊
=== licenserc.toml ===
[header]␊
text = "Copyright {{ attrs.git_file_created_year }}-{{ attrs.git_file_modified_year }} {{ attrs.git_authors | join(', ') }}"␊
␊
[files]␊
excludes = ["other.rs"]␊
includes = ["**/*.rs"]␊
␊
[git]␊
file_attrs = "enable"␊
ignore = "disable"␊
=== new/fresh.rs ===
fn untracked() {}␊
=== other.rs ===
fn other() {}␊
